SONARPHP-1499 Unignore the jGit stacktrace in Integration Test